ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: web-blue
            port: 
              number: 80
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: web-green
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
   - host: blue.127.0.0.1.nip.io
     http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-blue
            port: 
              number: 80
   - host: green.127.0.0.1.nip.io
     http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-green
            port: 
              number: 80  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress
spec:
  ingressClassName: nginx 
  defaultBackend: 
    service:
      name: nginx
      port:
        number: 80
